# bulksender

./: .env  .env.development  .env.local  .env.production  .env.staging  .gitignore  README.md  asset-manifest.json  bulk_sender-asset-senhub.json  bulk_sender.16f80adb5ea62e3fd722.js  bulk_sender.16f80adb5ea62e3fd722.js.map  craco-theme.js  craco.config.js  gulpfile.js  index.html  index.js  index.js.map  manifest.json  modulefederation.config.js  package-lock.json  package.json  register-senhub.json  report.html  tsconfig.ext.json  tsconfig.json
.github/template/: app.yml
.github/workflows/: main.yml
plugins/: craco-analyzer.js  craco-buffer.js  craco-compatibility.js  craco-module-federation.js  craco-postcss.js  craco-silence.js  craco-theme.js  manifest-builder.js
plugins/craco-less/: dark.os.js  index.app.js  index.js  index.os.dark.js  index.os.js  index.os.light.js  light.os.js
plugins/craco-module-federation/: index.js
plugins/webpack-buffer/: index.js
program/: README.md  package-lock.json  package.json  soprox.config.json
program/.husky/: pre-commit  preCommit.js
program/program/: Cargo.toml
program/program/src/: error.rs  instruction.rs  lib.rs
program/program/src/helper/: math.rs  mod.rs  util.rs
program/program/src/interfaces/: mod.rs  xsplata.rs  xsplt.rs  xsystem.rs
program/program/src/processor/: checked_bulk_transfer.rs  checked_transfer.rs  mod.rs
public/: 404.html  index.html
src/: bootstrap.app.tsx  bootstrap.tsx  index.tsx  react-app-env.d.ts  senhub.manifest.ts  senhub.register.ts  senos.manifest.ts  static.app.tsx
(+2342 files in other folders)
