[package]
authors = ["tu Phan <tuphan@descartes.network>"]
description = "A Bulksender Program"
edition = "2018"
license = "MIT"
name = "main"
version = "0.0.1"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
byteorder = "1.3"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.7.11"
spl-associated-token-account = { version = "1.0.1", features = [
  "no-entrypoint",
] }
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
thiserror = "1.0"

[lib]
crate-type = ["cdylib", "lib"]
